# apps/spring-api/src/main/java/com/codesquad/issueTracker/issue/dto/response/IssueSearchResponse.java
@@ -5,9 +5,16 @@ import java.util.List;
 public record IssueSearchResponse(
         long openIssueCount,
         long closedIssueCount,
+        int pageNumber,
+        int pageSize,
+        long totalIssueCount,
+        int totalPages,
+        boolean first,
+        boolean last,
         List<IssueSummaryResponse> issues
 ) {
-    public static IssueSearchResponse from(long openIssueCount, long closedIssueCount, List<IssueSummaryResponse> issues) {
-        return new IssueSearchResponse(openIssueCount, closedIssueCount, issues);
+    public static IssueSearchResponse from(long openIssueCount, long closedIssueCount, int pageNumber, int pageSize, long totalIssueCount, int totalPages, boolean
+            first, boolean last ,List<IssueSummaryResponse> issues) {
+        return new IssueSearchResponse(openIssueCount, closedIssueCount,pageNumber,pageSize,totalIssueCount,totalPages,first,last, issues);
     }
 }
